Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.

$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.



Version 2.3.0
-------------
* API
  + Add hwloc/memattrs.h for exposing latency/bandwidth information between
    initiators (CPU sets for now) and target NUMA nodes.
    - When available, bandwidths and latencies are read from the ACPI HMAT
      table exposed by Linux kernel 5.2+.
    - Attributes may also be customized to expose user-defined performance
      information.
  + Add hwloc_get_local_numanode_objs() for listing NUMA nodes that are
    local to some locality.
  + The new topology flag HWLOC_TOPOLOGY_FLAG_IMPORT_SUPPORT causes
    support arrays to be loaded from XML exported with hwloc 2.3+.
    - hwloc_topology_get_support() now returns an additional "misc"
      array with feature "imported_support" set when support was imported.
  + Add hwloc_topology_refresh() to refresh internal caches after modifying
    the topology and before consulting the topology in a multithread context.
* Backends
  + Add a ROCm SMI backend and a hwloc/rsmi.h helper file for getting
    the locality of AMD GPUs, now exposed as "rsmi" OS devices.
    Thanks to Mike Li.
  + Remove POWER device-tree-based topology on Linux,
    (it was disabled by default since 2.1).
* Tools
  + Command-line options for specifying flags now understand comma-separated
    lists of flag names (substrings).
  + hwloc-info and hwloc-calc have new --local-memory --local-memory-flags
    and --best-memattr options for reporting local memory nodes and filtering
    by memory attributes.
  + hwloc-bind has a new --best-memattr option for filtering by memory attributes
    among the memory binding set.