@@ -21,8 +21,9 @@ bug fixes (and other actions) for each version of hwloc since version
 Version 2.3.0
 -------------
 * API
-  + Add hwloc/memattrs.h for exposing latency/bandwidth information between
-    initiators (CPU sets for now) and target NUMA nodes.
+  + Add hwloc/memattrs.h for exposing latency/bandwidth information
+    between initiators (CPU sets for now) and target NUMA nodes,
+    typically on heterogeneous platforms.
     - When available, bandwidths and latencies are read from the ACPI HMAT
       table exposed by Linux kernel 5.2+.
     - Attributes may also be customized to expose user-defined performance
